<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_stem_club">

    <fragment
        android:id="@+id/nav_stem_club"
        android:name="com.android.somo.ui.stem.StemClubFragment"
        android:label="@string/menu_stem_club"
        tools:layout="@layout/fragment_stem_club" />

    <fragment
        android:id="@+id/nav_next_code"
        android:name="com.android.somo.ui.nextcode.GalleryFragment"
        android:label="@string/menu_next_code"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_sifa"
        android:name="com.android.somo.ui.sifa.SlideshowFragment"
        android:label="@string/menu_sifa"
        tools:layout="@layout/fragment_slideshow" />
</navigation>